<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="true">Meet</string>
    <string name="name_app">SGU-Meet</string>
    <string name="login">Login</string>
    <string name="sig_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="search_hint">Search words</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="name_app">SGU-Meet</string>-->
</resources>